fix : Uploading Nathan contrib to main
Fixed folder tree after Nathan push.
Mask were not showing , this was fixed in the css too

--- a/css/style.css
+++ b/css/style.css
@@ -327,7 +327,9 @@ header h1 {
 }
 
 .card-front {
-  background: linear-gradient(135deg, #a2d2ff, #c7ceea);
+  background-image: url('../assets/images/mask1.jpg');
+  background-size: cover;
+  background-position: center;
 }
 
 .card-back {
